--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
 	.layer1{ :style => "position:absolute; z-index:100; width:100%; height:100%; overflow:hidden; background:url('/sample.jpg');" }
 	.layer2{ :style => "position:abosoute; z-index:200" }
 		/ layer 2 items (place holder??)
-	.layer3.container{ :style => "position:absolute; z-index:300" }
+	.layer3.container{ :style => "position:absolute; z-index:300; height:100%; width:100%;" }
 		/ actual clickable contents
 		.row
 			= yield
